force-app/main/default/objects/RC_DM_Compliance_Field__c/fields/BusinessStatus__c.field-meta.xml
<CustomField>
    <fullName>BusinessStatus__c</fullName>
    <label>Field Usage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>