force-app/main/default/objects/RC_DM_Compliance_Field__c/fields/DM_Config__c.field-meta.xml
<CustomField>
    <fullName>DM_Config__c</fullName>
    <label>DM Config</label>
    <length>50</length>
    <type>Text</type>
</CustomField>