force-app/main/default/objects/RC_DM_Compliance_Field__c/fields/Field_Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Field_Namespace_Prefix__c</fullName>
    <label>Field Namespace Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>