force-app/main/default/objects/RC_DM_Compliance_Field__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>