force-app/main/default/objects/RC_DM_Compliance_Field__c/fields/Masked_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Masked_Indicator__c</fullName>
    <formula>IF ( isMasked__c , &quot;✅&quot;, &quot;❗️&quot;)</formula>
    <label>Is Masked?</label>
    <type>Text</type>
</CustomField>