force-app/main/default/objects/RC_DM_Compliance_Field__c/fields/Masking_Category__c.field-meta.xml
<CustomField>
    <fullName>Masking_Category__c</fullName>
    <label>Masking Library</label>
    <length>50</length>
    <type>Text</type>
</CustomField>