force-app/main/default/objects/RC_DM_Compliance_Field__c/fields/Masking_Type__c.field-meta.xml
<CustomField>
    <fullName>Masking_Type__c</fullName>
    <label>Masking Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>