force-app/main/default/objects/RC_DM_Compliance_Field__c/fields/Object_Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Object_Namespace_Prefix__c</fullName>
    <label>Object Namespace Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>