force-app/main/default/objects/RC_DM_Compliance_Field__c/fields/SecurityClassification__c.field-meta.xml
<CustomField>
    <fullName>SecurityClassification__c</fullName>
    <label>Data Sensitivity Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>