force-app/main/default/objects/RC_DM_Compliance_Field__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Report_ID__c</columns>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>ComplianceGroup__c</columns>
    <columns>Masked_Indicator__c</columns>
    <columns>DM_Config__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Masking_Type__c</columns>
    <columns>Masking_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>